--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
+server:
+  port: 8080
+  compression:
+    enabled: true
+
 spring:
-  application:
-    name: HUrima
+  datasource:
+    url
+    name: hurimadb
+  jpa:
+    show-sql: true  #
+
