--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -27,6 +26,7 @@
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-redux": "^7.1.21",
+    "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2"
   }
 }
