--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.15",
     "@types/react": "^17.0.37",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-bootstrap": "^0.24.5",
     "axios": "^0.24.0",
@@ -24,6 +25,7 @@
     "react-i18next": "^11.15.1",
     "react-list": "^0.8.16",
     "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-router-redux": "^4.0.8",
@@ -60,7 +62,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.29",
     "@types/react-redux": "^7.1.21",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2"
