[Locale]: Change encoding to UTF-8

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -14,4 +14,4 @@ spring:
           starttls: true
     protocol: smtp
     test-connection: true
-    default-encoding: SHIFT_JIS
+    default-encoding: UTF-8
