--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -17,6 +16,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
     "@types/react-router-bootstrap": "^0.24.5",
+    "@types/redux-mock-store": "^1.0.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "graphql": "^16.2.0",
@@ -33,6 +33,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "sockjs-client": "^1.5.2",
     "styled-components": "^5.3.3",
