--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/redux-mock-store": "^1.0.3",
     "axios": "^0.24.0",
+    "axios-mock-adapter": "^1.20.0",
     "bootstrap": "^5.1.3",
     "graphql": "^16.2.0",
     "i18next": "^21.6.3",
