--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,24 +6,25 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.63",
+    "@mui/material": "^5.2.7",
+    "@mui/system": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.15",
     "@types/react": "^17.0.37",
-    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
-    "@types/react-router-bootstrap": "^0.24.5",
     "@types/redux-mock-store": "^1.0.3",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
-    "bootstrap": "^5.1.3",
     "graphql": "^16.2.0",
     "i18next": "^21.6.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.1",
     "react-list": "^0.8.16",
@@ -32,7 +33,7 @@
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
