WIP migrating from Bootstrap to MUI

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "@mui/system": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -26,11 +24,11 @@
     "i18next": "^21.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-i18next": "^11.15.1",
     "react-list": "^0.8.16",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
-    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^5.0.0",
