--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.5",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.63",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
     "@types/redux-mock-store": "^1.0.3",
+    "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
     "graphql": "^16.2.0",
@@ -38,7 +40,8 @@
     "sockjs-client": "^1.5.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
