--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   # DB
-  flemadb:
+  flema:
     image: postgres
-    container_name: flemadb
-    hostname: flemadb
+    container_name: flema
+    hostname: flema
     restart: always
     environment:
-      PGDATABASE: 'flemadb'
+      PGDATABASE: 'flema'
       PGUSER: 'root'
       PGPASSWORD: 'password'
     ports:
@@ -14,7 +14,7 @@ services:
     expose:
       - "5432"
     volumes:
-      - flemadb-volume:/var/lib/postgres
+      - flema-volume:/var/lib/postgres
     networks:
       - flema-api-server-network
 
@@ -37,7 +37,7 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
 
 volumes:
-  flemadb-volume:
+  flema-volume:
 
 networks:
   flema-api-server-network:
