--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "flema",
-  "name": "flema",
+  "short_name": "hurima",
+  "name": "hurima",
   "description": "An online flea market app",
   "start_url": "/",
   "scope": "/",
