--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,12 +1,6 @@
 {
-  "short_name": "hurima",
-  "name": "hurima",
-  "description": "An online flea market app",
-  "start_url": "/",
-  "scope": "/",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
@@ -24,4 +18,8 @@
       "sizes": "512x512"
     }
   ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
