--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -1,70 +1,194 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
 name:           backend
-version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/backend#readme>
-homepage:       https://github.com/githubuser/backend#readme
-bug-reports:    https://github.com/githubuser/backend/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2023 Author name here
-license:        BSD3
-license-file:   LICENSE
+version:        0.0.0
 build-type:     Simple
-extra-source-files:
-    README.md
-    CHANGELOG.md
 
-source-repository head
-  type: git
-  location: https://github.com/githubuser/backend
+flag dev
+  description: Turn on development settings, like auto-reload templates.
+  manual: False
+  default: False
+
+flag library-only
+  description: Build for use with "yesod devel"
+  manual: False
+  default: False
 
 library
   exposed-modules:
-      Lib
+      Application
+      Foundation
+      Handler.Comment
+      Handler.Common
+      Handler.Home
+      Handler.Profile
+      Import
+      Import.NoFoundation
+      Model
+      Settings
+      Settings.StaticFiles
   other-modules:
       Paths_backend
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      Spock >=0.14
-    , base >=4.7 && <5
-    , mtl
-    , text
+      aeson >=1.4 && <2.1
+    , base >=4.9.1.0 && <5
+    , bytestring >=0.10 && <0.12
+    , case-insensitive
+    , classy-prelude ==1.5.*
+    , classy-prelude-conduit ==1.5.*
+    , classy-prelude-yesod ==1.5.*
+    , conduit >=1.0 && <2.0
+    , containers
+    , data-default
+    , directory >=1.1 && <1.4
+    , fast-logger >=2.2 && <3.2
+    , file-embed
+    , foreign-store
+    , hjsmin >=0.1 && <0.3
+    , http-client-tls ==0.3.*
+    , http-conduit ==2.3.*
+    , monad-control >=0.3 && <1.1
+    , monad-logger ==0.3.*
+    , persistent >=2.9 && <2.14
+    , persistent-postgresql ==2.13.*
+    , persistent-template >=2.5 && <2.14
+    , safe
+    , shakespeare ==2.0.*
+    , template-haskell
+    , text >=0.11 && <2.0
+    , time
+    , unordered-containers
+    , vector
+    , wai
+    , wai-extra >=3.0 && <3.2
+    , wai-logger >=2.2 && <2.5
+    , warp >=3.0 && <3.4
+    , yaml ==0.11.*
+    , yesod ==1.6.*
+    , yesod-auth ==1.6.*
+    , yesod-core ==1.6.*
+    , yesod-form >=1.6 && <1.8
+    , yesod-static ==1.6.*
   default-language: Haskell2010
+  if (flag(dev)) || (flag(library-only))
+    ghc-options: -Wall -fwarn-tabs -O0
+    cpp-options: -DDEVELOPMENT
+  else
+    ghc-options: -Wall -fwarn-tabs -O2
 
-executable backend-exe
-  main-is: Main.hs
+executable backend
+  main-is: main.hs
   other-modules:
+      DevelMain
       Paths_backend
   hs-source-dirs:
       app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      Spock >=0.14
+      aeson >=1.4 && <2.1
     , backend
-    , base >=4.7 && <5
-    , mtl
-    , text
+    , base >=4.9.1.0 && <5
+    , bytestring >=0.10 && <0.12
+    , case-insensitive
+    , classy-prelude ==1.5.*
+    , classy-prelude-conduit ==1.5.*
+    , classy-prelude-yesod ==1.5.*
+    , conduit >=1.0 && <2.0
+    , containers
+    , data-default
+    , directory >=1.1 && <1.4
+    , fast-logger >=2.2 && <3.2
+    , file-embed
+    , foreign-store
+    , hjsmin >=0.1 && <0.3
+    , http-client-tls ==0.3.*
+    , http-conduit ==2.3.*
+    , monad-control >=0.3 && <1.1
+    , monad-logger ==0.3.*
+    , persistent >=2.9 && <2.14
+    , persistent-postgresql ==2.13.*
+    , persistent-template >=2.5 && <2.14
+    , safe
+    , shakespeare ==2.0.*
+    , template-haskell
+    , text >=0.11 && <2.0
+    , time
+    , unordered-containers
+    , vector
+    , wai
+    , wai-extra >=3.0 && <3.2
+    , wai-logger >=2.2 && <2.5
+    , warp >=3.0 && <3.4
+    , yaml ==0.11.*
+    , yesod ==1.6.*
+    , yesod-auth ==1.6.*
+    , yesod-core ==1.6.*
+    , yesod-form >=1.6 && <1.8
+    , yesod-static ==1.6.*
   default-language: Haskell2010
+  if flag(library-only)
+    buildable: False
 
 test-suite backend-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Handler.CommentSpec
+      Handler.CommonSpec
+      Handler.HomeSpec
+      Handler.ProfileSpec
+      TestImport
       Paths_backend
   hs-source-dirs:
       test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall
   build-depends:
-      Spock >=0.14
+      aeson >=1.4 && <2.1
     , backend
-    , base >=4.7 && <5
-    , mtl
-    , text
+    , base >=4.9.1.0 && <5
+    , bytestring >=0.10 && <0.12
+    , case-insensitive
+    , classy-prelude ==1.5.*
+    , classy-prelude-conduit ==1.5.*
+    , classy-prelude-yesod ==1.5.*
+    , conduit >=1.0 && <2.0
+    , containers
+    , data-default
+    , directory >=1.1 && <1.4
+    , fast-logger >=2.2 && <3.2
+    , file-embed
+    , foreign-store
+    , hjsmin >=0.1 && <0.3
+    , hspec >=2.0.0
+    , http-client-tls ==0.3.*
+    , http-conduit ==2.3.*
+    , monad-control >=0.3 && <1.1
+    , monad-logger ==0.3.*
+    , persistent >=2.9 && <2.14
+    , persistent-postgresql ==2.13.*
+    , persistent-template >=2.5 && <2.14
+    , safe
+    , shakespeare ==2.0.*
+    , template-haskell
+    , text >=0.11 && <2.0
+    , time
+    , unordered-containers
+    , vector
+    , wai
+    , wai-extra >=3.0 && <3.2
+    , wai-logger >=2.2 && <2.5
+    , warp >=3.0 && <3.4
+    , yaml ==0.11.*
+    , yesod ==1.6.*
+    , yesod-auth ==1.6.*
+    , yesod-core ==1.6.*
+    , yesod-form >=1.6 && <1.8
+    , yesod-static ==1.6.*
+    , yesod-test
   default-language: Haskell2010
