--- a/backend/config/settings.yml
+++ b/backend/config/settings.yml
@@ -21,24 +21,12 @@ ip-from-header: "_env:YESOD_IP_FROM_HEADER:false"
 # Optional values with the following production defaults.
 # In development, they default to the inverse.
 #
+# development: false
 # detailed-logging: false
 # should-log-all: false
 # reload-templates: false
 # mutable-static: false
 # skip-combining: false
-# auth-dummy-login : false
-
-# NB: If you need a numeric value (e.g. 123) to parse as a String, wrap it in single quotes (e.g. "_env:YESOD_PGPASS:'123'")
-# See https://github.com/yesodweb/yesod/wiki/Configuration#parsing-numeric-values-as-strings
-
-database:
-  user:     "_env:YESOD_PGUSER:backend"
-  password: "_env:YESOD_PGPASS:backend"
-  host:     "_env:YESOD_PGHOST:localhost"
-  port:     "_env:YESOD_PGPORT:5432"
-  # See config/test-settings.yml for an override during tests
-  database: "_env:YESOD_PGDATABASE:backend"
-  poolsize: "_env:YESOD_PGPOOLSIZE:10"
 
 copyright: Insert copyright statement here
 #analytics: UA-YOURCODE
