--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "aws-sdk": "^2.1323.0",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
