--- a/amplify.yml
+++ b/amplify.yml
@@ -1,8 +1,13 @@
 frontend:
   phases:
+    preBuild:
+      commands: 
+        - npm install env-cmd
+        - npm ci
     build:
       commands:
-        - npm run build
+        - echo "I am running on $BUILD_ENV"
+        - npm run build:$BUILD_ENV
   artifacts:
     baseDirectory: build
     files:
