--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
